--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=final_backend_5500
+
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.database=DashDoor
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
