--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=final_backend_5500
 
-spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.uri=mongodb+srv://jiangtianh:MUaxDqTSz3kGqE7G@cluster0.6hhyc70.mongodb.net/
 spring.data.mongodb.database=DashDoor
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
